Final-project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.vasylkly.devops12.test-danit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-app
                port:
                  number: 80
